<resources>
    <string name="app_name">Proyecto_Libreria</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_catalogo">CatalogoActivity</string>
    <string name="title_activity_main2">Main2Activity</string>


    <string name="login_txt_titulo">Librería Sofía</string>
    <string name="login_btn_ingresar">Ingresar</string>
    <string name="login_txt_registro">¿No tiene usuario?, entonces...</string>
    <string name="login_btn_registro">Regístrese</string>
    <string name="login_pltxt_usuario">Usuario:</string>
    <string name="login_pltxt_password">Contraseña:</string>
    <string name="login_txt_iniciarsesion">Inicio de Sesión</string>
    <string name="txti_titulo">Título</string>
    <string name="txti_Autor">Autor</string>
    <string name="txti_ISBN">ISBN</string>
    <string name="txti_precio">Precio</string>
    <string name="txt_carrito">Carrito</string>
    <string name="txt_catalogo">Catálogo</string>
    <string name="txt_totalAPagar">Total a pagar:</string>
    <string name="txt_metodoPago">Método de pago:</string>
    <string name="txt_debito">Débito</string>
    <string name="txt_numero_factura">Ingrese número de tarjeta</string>
    <string name="txt_edicion">Edición</string>
    <string name="txt_editorial">Editorial</string>
    <string name="txt_estado">Estado</string>
    <string name="txt_activo">Activo</string>
    <string name="txt_nuevoLibro">Nuevo libro</string>
    <string name="txt_idioma">Idioma</string>
    <string name="txt_facturasCliente">Facturas cliente</string>
    <string name="txt_fecha">Fecha</string>
    <string name="txt_cantidad">Cantidad</string>
    <string name="txt_total">Total</string>



    //activity registro usuario
    <string name="actRU_nombreUsuario">Nombre:</string>
    <string name="actRU_apellidoUsuario">Apellido:</string>
    <string name="actRU_cedulaUsuario">Cédula:</string>
    <string name="actRU_userUsuario">Usuario:</string>
    <string name="actRU_passwordUsuario">Contraseña:</string>
    <string name="actRU_tipoUsuario">Tipo Usuario:</string>
    <string name="actRU_btn">Registrar</string>
    <string name="productosComprados">Productos compradosr</string>
</resources>
