<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Actividades.MainActivity" android:id="@+id/login_ly">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="303dp"
            android:layout_height="494dp" android:id="@+id/login_ly_linear"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent">
        <TextView
                android:text="@string/login_txt_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/login_txt_titulo"
                android:gravity="center"
                android:layout_marginBottom="25dp" android:textColor="@color/colorCafeOscuro"
                android:textStyle="bold|italic" android:fontFamily="serif" android:textSize="37sp"/>
        <TextView
                android:text="@string/login_txt_iniciarsesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/login_txt_ingreso"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:gravity="center"
                android:layout_marginBottom="25dp"/>
        <TextView
                android:text="@string/login_pltxt_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView5"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/login_txtin_usuario"
                android:layout_marginBottom="25dp"/>
        <TextView
                android:text="@string/login_pltxt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView6"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/login_txtin_password"
                android:layout_marginBottom="25dp"/>
        <Button
                android:text="@string/login_btn_ingresar"
                android:layout_width="match_parent"
                android:layout_height="45dp" android:id="@+id/login_btn_ingresar"
                android:background="@color/colorCafeMedio" android:textColor="@color/colorBlanco"
                android:layout_marginBottom="25dp"/>
        <TextView
                android:text="@string/login_txt_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/login_txt_registro"
                android:layout_marginBottom="25dp" android:gravity="center"/>
        <Button
                android:text="@string/login_btn_registro"
                android:layout_width="match_parent"
                android:layout_height="45dp" android:id="@+id/login_btn_registro"
                android:textColor="@color/colorBlanco" android:background="@color/colorCafeMedio"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>