<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Actividades.RegistroUsuarioActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="293dp"
            android:layout_height="wrap_content" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent">
        <TextView
                android:text="@string/actRU_nombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView24"/>
        <EditText
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtregistroUser_nombre"/>
        <TextView
                android:text="@string/actRU_apellidoUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView25"/>
        <EditText
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtregistroUser_apellido"/>
        <TextView
                android:text="@string/actRU_cedulaUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView26"/>
        <EditText
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtregistroUser_cedula"/>
        <TextView
                android:text="@string/actRU_userUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView27"/>
        <EditText
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtregistroUser_user"/>
        <TextView
                android:text="@string/actRU_passwordUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView28"/>
        <EditText
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txtregistroUser_password"/>
        <TextView
                android:layout_marginBottom="15dp"
                android:text="@string/actRU_tipoUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView29"/>
        <Spinner
                android:layout_marginBottom="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/spinnerTipoUsuario"/>
        <Button
                android:text="@string/actRU_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btn_RegistrarUsuario"
                android:background="@color/colorCafeMedio" android:textColor="@color/colorBlanco"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>