<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="384dp"
            android:layout_height="535dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:gravity="center_horizontal"
            app:layout_constraintVertical_bias="0.165">
        <TextView
                android:text="@string/login_txt_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bienvenido"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="40dp"
        />
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_marginBottom="8dp"
        />
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_marginBottom="30dp"
        />
        <Button
                android:text="@string/login_btn_ingresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_ingresar"
                android:layout_marginBottom="30dp"
        />
        <TextView
                android:text="@string/login_txt_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
        />
        <Button
                android:text="@string/login_btn_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_registrarse"
                android:layout_marginBottom="8dp"
        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>