<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:text="@string/txti_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp" android:layout_marginTop="60dp"/>
    <TextView
            android:text="@string/txti_Autor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView12" android:layout_marginTop="56dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="48dp"/>
    <TextView
            android:text="@string/txt_edicion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView15" android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="48dp"/>
    <TextView
            android:text="@string/txt_editorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/textView17" android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="48dp"/>
    <TextView
            android:text="@string/txti_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/textView18" android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="48dp"/>
    <TextView
            android:text="@string/txt_estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView20"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="36dp"/>
    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/dialog_libro_inputTitulo"
            android:layout_marginTop="48dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView12" android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/dialog_libro_inputAutor" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_libro_inputTitulo"
            app:layout_constraintStart_toEndOf="@+id/textView15" android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:layout_width="200dp"
            android:layout_height="47dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/dialog_libro_inputEdicion"
            app:layout_constraintStart_toEndOf="@+id/textView17"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_libro_inputAutor" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/dialog_libro_inputEditorial"
            app:layout_constraintStart_toEndOf="@+id/textView18"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_libro_inputEdicion" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/dialog_libro_inputPrecio"
            app:layout_constraintStart_toEndOf="@+id/textView19"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_libro_inputEditorial"
            app:layout_constraintHorizontal_bias="1.0"/>
    <Switch
            android:text="@string/txt_activo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_libro_swithEstado"
            app:layout_constraintStart_toEndOf="@+id/textView20"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_libro_inputISBN" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.64"/>
    <TextView
            android:text="@string/txti_ISBN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView19" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="52dp" android:layout_marginTop="40dp"/>
    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/dialog_libro_inputISBN"
            app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_libro_inputPrecio"
            app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/txt_idioma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_idioma"
            app:layout_constraintTop_toBottomOf="@+id/textView20" android:layout_marginTop="72dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="36dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="138dp"
            android:layout_height="37dp"
            android:id="@+id/dialog_libro_inputIdioma" app:layout_constraintStart_toEndOf="@+id/txt_idioma"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_libro_swithEstado"
            android:layout_marginTop="52dp" app:layout_constraintHorizontal_bias="0.617"/>
</androidx.constraintlayout.widget.ConstraintLayout>