<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/txt_totalAPagar"
            android:layout_width="119dp"
            android:layout_height="32dp"
            android:id="@+id/textView11" android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"/>
    <TextView
            android:layout_width="165dp"
            android:layout_height="41dp"
            android:id="@+id/dialog_factura_totalPagar" app:layout_constraintStart_toEndOf="@+id/textView11"
            android:layout_marginStart="8dp" android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.228"/>
    <TextView
            android:text="@string/txt_metodoPago"
            android:layout_width="117dp"
            android:layout_height="39dp"
            android:id="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11"/>
    <TextView
            android:text="@string/txt_debito"
            android:layout_width="174dp"
            android:layout_height="38dp"
            android:id="@+id/textView14" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_factura_totalPagar"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.276"/>
    <TextView
            android:text="@string/txt_numero_factura"
            android:layout_width="114dp"
            android:layout_height="49dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp" android:id="@+id/textView16"
    />
    <EditText
            android:layout_width="151dp"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/dialog_factura_inputNumTarjeta"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            android:layout_marginStart="10dp" android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/textView14" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.194"
            app:layout_constraintVertical_bias="0.024"/>
</androidx.constraintlayout.widget.ConstraintLayout>