<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Actividades.CarritoActivity">
    <Button

            android:layout_width="375dp"
            android:layout_height="43dp"
            android:padding="10dp"
            android:text="Seguir Comprando"
            android:textSize="12sp"
            android:id="@+id/btn_catalogo" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/colorBlanco"
            android:background="@color/colorCafeClaro"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="376dp"
            android:layout_height="391dp"
            android:id="@+id/rv_carrito"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" tools:listitem="@layout/recycler_view_item"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/textView"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView23"/>
    <Button
            android:layout_width="375dp"
            android:layout_height="59dp"
            android:padding="10dp"
            android:text="comprar"
            android:textSize="12sp"
            android:id="@+id/btn_comprar"
            app:layout_constraintStart_toStartOf="@+id/btn_catalogo"
            app:layout_constraintEnd_toEndOf="@+id/btn_catalogo" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="12dp" app:layout_constraintBottom_toTopOf="@+id/btn_catalogo"
            android:textColor="@color/colorBlanco" android:background="@color/colorCafeMedio"/>
    <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_totalPagar"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView" app:layout_constraintBottom_toBottomOf="@+id/textView"/>
    <TextView
            android:text="@string/txt_debito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView4" app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginStart="70dp"/>
    <TextView
            android:text="@string/txt_metodoPago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/btn_comprar"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/btn_comprar"/>
    <TextView
            android:text="@string/txt_totalAPagar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"/>
    <TextView
            android:text="Carrito:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView23" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:fontFamily="@font/roboto_medium"
            android:textSize="30sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>