<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Actividades.DetalleActivity">

    <TextView
            android:text="Detalles de la Compra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView31"
            android:fontFamily="@font/roboto_medium"
            android:textSize="30sp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" android:textColor="@color/colorCafeOscuro"/>
    <TextView
            android:text="@string/txt_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView31"/>
    <TextView
            android:text="@string/txt_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView21"
            app:layout_constraintStart_toStartOf="@+id/textView10" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"/>
    <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_fecha"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toEndOf="@+id/textView10" android:layout_marginStart="24dp"/>
    <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_total"
            app:layout_constraintTop_toTopOf="@+id/textView21"
            app:layout_constraintBottom_toBottomOf="@+id/textView21"
            app:layout_constraintStart_toStartOf="@+id/txt_fecha"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="333dp"
            android:layout_height="392dp"
            android:id="@+id/rv_libros_detalle"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            android:layout_marginTop="20dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="361dp"
            android:layout_height="59dp"
            android:id="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/textView21"
            android:layout_marginTop="32dp">

        <TextView
                android:text="@string/productosComprados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView22"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:fontFamily="@font/roboto_medium"
                android:textSize="30sp"
                android:textColor="@color/colorCafeOscuro"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>